{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 45,
  "lineage": "09eafbf7-551b-d184-cef3-444d611449ad",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "hello_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/regions/us-central1/networkEndpointGroups/hello-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-05-22T09:43:36.017-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "iooKSOWxPP4=",
            "generated_id": 7379769959607626456,
            "id": "projects/latamxp-sandbox/global/backendServices/hello-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "hello-backend",
            "port_name": "http",
            "project": "latamxp-sandbox",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/securityPolicies/hello-cloud-armor-owasp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/backendServices/hello-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.cloud_function.google_cloudfunctions_function.hello_function",
            "module.cloud_function.google_storage_bucket.bucket",
            "module.cloud_function.google_storage_bucket_object.archive",
            "module.load_balancer.google_compute_region_network_endpoint_group.hello_neg",
            "module.load_balancer.google_compute_security_policy.hello_cloud_armor_policy"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "hello_fw_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 7672964652233583259,
            "id": "projects/latamxp-sandbox/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.111.199.11",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "latamxp-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.cloud_function.google_cloudfunctions_function.hello_function",
            "module.cloud_function.google_storage_bucket.bucket",
            "module.cloud_function.google_storage_bucket_object.archive",
            "module.load_balancer.google_compute_backend_service.hello_backend",
            "module.load_balancer.google_compute_region_network_endpoint_group.hello_neg",
            "module.load_balancer.google_compute_security_policy.hello_cloud_armor_policy",
            "module.load_balancer.google_compute_target_http_proxy.hello_http_proxy",
            "module.load_balancer.google_compute_url_map.hello_load_balancer"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "hello_cloud_armor_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "T8R6ybCNF-I=",
            "id": "projects/latamxp-sandbox/global/securityPolicies/hello-cloud-armor-owasp",
            "name": "hello-cloud-armor-owasp",
            "project": "latamxp-sandbox",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default allow rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Bloquea IPs maliciosas conocidas",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "1.2.3.4/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Bloqueo de SQL Injection",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredExpr('sqli-v33-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1002,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Bloqueo de XSS (OWASP)",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredExpr('xss-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1001,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/securityPolicies/hello-cloud-armor-owasp",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "hello_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-22T09:44:24.491-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/latamxp-sandbox/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "latamxp-sandbox",
            "proxy_bind": false,
            "proxy_id": 3643097967696734855,
            "self_link": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/urlMaps/hello-load-balancer"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.cloud_function.google_cloudfunctions_function.hello_function",
            "module.cloud_function.google_storage_bucket.bucket",
            "module.cloud_function.google_storage_bucket_object.archive",
            "module.load_balancer.google_compute_backend_service.hello_backend",
            "module.load_balancer.google_compute_region_network_endpoint_group.hello_neg",
            "module.load_balancer.google_compute_security_policy.hello_cloud_armor_policy",
            "module.load_balancer.google_compute_url_map.hello_load_balancer"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "hello_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-22T09:44:12.137-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/backendServices/hello-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "tMiJNgiGCUY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/latamxp-sandbox/global/urlMaps/hello-load-balancer",
            "map_id": 5258851118125083316,
            "name": "hello-load-balancer",
            "path_matcher": [],
            "project": "latamxp-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/latamxp-sandbox/global/urlMaps/hello-load-balancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.cloud_function.google_cloudfunctions_function.hello_function",
            "module.cloud_function.google_storage_bucket.bucket",
            "module.cloud_function.google_storage_bucket_object.archive",
            "module.load_balancer.google_compute_backend_service.hello_backend",
            "module.load_balancer.google_compute_region_network_endpoint_group.hello_neg",
            "module.load_balancer.google_compute_security_policy.hello_cloud_armor_policy"
          ]
        }
      ]
    }
  ]
}